--- a/app/views/accounts/index.html.erb
+++ b/app/views/accounts/index.html.erb
@@ -21,7 +21,7 @@
   </div>
 </header>
 
-<% if @manual_accounts.empty? && @plaid_items.empty? && @simplefin_items.empty? && @lunchflow_items.empty? && @enable_banking_items.empty? && @coinstats_items.empty? %>
+<% if @manual_accounts.empty? && @plaid_items.empty? && @simplefin_items.empty? && @lunchflow_items.empty? && @enable_banking_items.empty? && @coinstats_items.empty? && @coinbase_items.empty? %>
   <%= render "empty" %>
 <% else %>
   <div class="space-y-2">
@@ -43,6 +43,10 @@
 
     <% if @coinstats_items.any? %>
       <%= render @coinstats_items.sort_by(&:created_at) %>
+    <% end %>
+
+    <% if @coinbase_items.any? %>
+      <%= render @coinbase_items.sort_by(&:created_at) %>
     <% end %>
 
     <% if @manual_accounts.any? %>
