--- a/app/views/holdings/_holding.html.erb
+++ b/app/views/holdings/_holding.html.erb
@@ -48,7 +48,7 @@
       <%# Show Total Return (unrealized G/L) when cost basis exists (from trades or manual) %>
       <% if holding.trend %>
         <%= tag.p format_money(holding.trend.value), style: "color: #{holding.trend.color};" %>
-        <%= tag.p "(#{number_to_percentage(holding.trend.percent, precision: 1)})", style: "color: #{holding.trend.color};" %>
+        <%= tag.p "(#{holding.trend.percent_formatted})", style: "color: #{holding.trend.color};" %>
       <% else %>
         <%= tag.p "--", class: "text-secondary" %>
         <%= tag.p t(".no_cost_basis"), class: "text-xs text-secondary" %>
