--- a/app/views/loans/edit.html.erb
+++ b/app/views/loans/edit.html.erb
@@ -1,5 +1,6 @@
 <%= render DS::Dialog.new do |dialog| %>
-  <% dialog.with_header(title: t(".edit", account: @account.name)) %>
+  <% title = @account.installment.present? ? t("loans.edit.installment") : t(".edit", account: @account.name) %>
+  <% dialog.with_header(title: title) %>
   <% dialog.with_body do %>
     <%= render "form", account: @account, url: loan_path(@account) %>
   <% end %>
