--- a/app/views/shared/_badge.html.erb
+++ b/app/views/shared/_badge.html.erb
@@ -3,14 +3,14 @@
 <%
   def badge_classes(c, p)
     classes = case c
-              when 'success'
-                'bg-green-500/5 text-green-500'
-              when 'error'
-                'bg-red-500/5 text-red-500'
-              when 'warning'
-                'bg-orange-500/5 text-orange-500'
+              when "success"
+                "bg-green-500/5 text-green-500"
+              when "error"
+                "bg-red-500/5 text-red-500"
+              when "warning"
+                "bg-orange-500/5 text-orange-500"
               else
-                'bg-gray-500/5 text-secondary'
+                "bg-gray-500/5 text-secondary"
               end
 
     p ? "#{classes} animate-pulse" : classes
