Use subscription flow for monetary contributions

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -91,12 +91,12 @@
             <div class="px-4 py-3 space-y-4 bg-container shadow-border-xs rounded-xl">
               <div class="flex items-start justify-between">
                 <div>
-                  <p class="text-sm font-medium text-primary">Free trial</p>
-                  <p class="text-sm text-secondary"><%= Current.family.days_left_in_trial %> days remaining</p>
+                  <p class="text-sm font-medium text-primary">Open demo</p>
+                  <p class="text-sm text-secondary">Data deleted in <%= Current.family.days_left_in_trial %> days</p>
                 </div>
 
                 <%= render DS::Link.new(
-                  text: "Upgrade",
+                  text: "Contribute",
                   href: upgrade_subscription_path,
                 ) %>
               </div>
