--- a/app/views/subscriptions/upgrade.html.erb
+++ b/app/views/subscriptions/upgrade.html.erb
@@ -25,18 +25,18 @@
     <%= image_tag "logo-color.png", class: "w-16 mb-6" %>
 
     <% if Current.family.trialing? %>
-      <p class="text-xl lg:text-3xl text-primary font-display font-medium">Your trial has <%= Current.family.days_left_in_trial %> days remaining</p>
+      <p class="text-xl lg:text-3xl text-primary font-display font-medium">Your data will be deleted in <%= Current.family.days_left_in_trial %> days</p>
     <% else %>
       <p class="text-xl lg:text-3xl text-primary font-display font-medium">Your trial is over</p>
     <% end %>
 
     <h2 class="text-xl lg:text-3xl font-display font-medium mb-2">
-      <span class="text-secondary">Unlock</span>
+      <span class="text-secondary">Support</span>
       <span class="bg-gradient-to-r from-[#EABE7F] to-[#957049] bg-clip-text text-transparent">Sure</span>
       <span class="text-secondary">today</span>
     </h2>
 
-    <p class="text-sm text-secondary mb-8">To continue supporting the development of this codebase, pick a plan below.</p>
+    <p class="text-sm text-secondary mb-8">Continue supporting the development of this codebase!</p>
 
     <%= form_with url: new_subscription_path, method: :get, class: "max-w-xs", data: { turbo: false } do |form| %>
       <div class="space-y-4 mb-6">
@@ -46,13 +46,13 @@
 
       <div class="text-center space-y-2">
         <%= render DS::Button.new(
-          text: "Subscribe and unlock Sure",
+          text: "Contribute and support Sure",
           variant: "primary",
           full_width: true
         ) %>
 
         <p class="text-xs text-secondary">
-          In the next step, you'll be redirected to Stripe which handles our billing.
+          In the next step, you'll be redirected to Stripe which handles credit cards for us.
         </p>
       </div>
     <% end %>
