--- a/app/views/onboardings/trial.html.erb
+++ b/app/views/onboardings/trial.html.erb
@@ -17,7 +17,7 @@
     <%= image_tag "logo-color.png", class: "w-16 mb-6" %>
 
     <p class="text-xl lg:text-3xl text-primary font-display font-medium">
-      Try Sure for 90 days
+      Try Sure for 45 days
     </p>
 
     <h2 class="text-xl lg:text-3xl font-display text-secondary font-medium mb-2">
@@ -25,13 +25,13 @@
     </h2>
 
     <p class="text-sm text-secondary text-center mb-8">
-      Starting today you can give the product a good look.  <br/>If you like it, self-host or subscribe to continue using it here.
+      Starting today you can give the product a good look.  <br/>If you like it, self-host or contribute to continue using it here.
     </p>
 
     <div class="w-full">
       <% if Current.family.can_start_trial? %>
         <%= render DS::Button.new(
-        text: "Try Sure for 90 days",
+        text: "Try Sure for 45 days",
         href: subscription_path,
         full_width: true,
         data: { turbo: false }
@@ -53,7 +53,7 @@
   </div>
 
   <div class="space-y-8">
-    <h2 class="text-center text-lg lg:text-2xl font-medium text-primary">How your trial will work</h2>
+    <h2 class="text-center text-lg lg:text-2xl font-medium text-primary">How things work here</h2>
 
     <div class="flex gap-3">
       <div class="rounded-xl p-1 bg-gray-400/20 theme-dark:bg-gray-500/20 flex flex-col justify-between items-center text-secondary">
@@ -65,17 +65,17 @@
       <div class="space-y-12">
         <div class="space-y-1.5 text-sm">
           <p class="text-primary font-medium">Today</p>
-          <p class="text-secondary">You'll get free access to Sure for 90 days on AWS.</p>
+          <p class="text-secondary">You'll get free access to Sure for 45 days on our AWS.</p>
         </div>
 
         <div class="space-y-1.5 text-sm">
-          <p class="text-primary font-medium">In 80 days (<%= 80.days.from_now.strftime("%B %d") %>)</p>
-          <p class="text-secondary">We'll notify you to remind you to export your data or pay.</p>
+          <p class="text-primary font-medium">In 40 days (<%= 40.days.from_now.strftime("%B %d") %>)</p>
+          <p class="text-secondary">We'll notify you to remind you to export your data.</p>
         </div>
 
         <div class="space-y-1.5 text-sm">
-          <p class="text-primary font-medium">In 90 days (<%= 90.days.from_now.strftime("%B %d") %>)</p>
-          <p class="text-secondary">Your trial ends &mdash; subscribe to continue using Sure here!</p>
+          <p class="text-primary font-medium">In 45 days (<%= 45.days.from_now.strftime("%B %d") %>)</p>
+          <p class="text-secondary">We delete your data &mdash; contribute to continue using Sure here!</p>
         </div>
       </div>
     </div>
