--- a/app/views/settings/providers/show.html.erb
+++ b/app/views/settings/providers/show.html.erb
@@ -38,9 +38,9 @@
     </turbo-frame>
   <% end %>
 
-<%%= settings_section title: "Mercury", collapsible: true, open: false do %>
-  <turbo-frame id="mercury-providers-panel">
-    <%%= render "settings/providers/mercury_panel" %>
-  </turbo-frame>
-<%% end %>
+<%= settings_section title: "Mercury", collapsible: true, open: false do %>
+    <turbo-frame id="mercury-providers-panel">
+      <%= render "settings/providers/mercury_panel" %>
+    </turbo-frame>
+  <% end %>
 </div>
