Localize Stripe payments message

--- a/app/views/subscriptions/upgrade.html.erb
+++ b/app/views/subscriptions/upgrade.html.erb
@@ -52,7 +52,7 @@
         ) %>
 
         <p class="text-xs text-secondary">
-          In the next step, you'll be redirected to Stripe which handles credit cards for us.
+          <%= t('subscriptions.upgrade.redirect_to_stripe') %>
         </p>
       </div>
     <% end %>
