--- a/app/views/settings/billings/show.html.erb
+++ b/app/views/settings/billings/show.html.erb
@@ -16,7 +16,7 @@
               <span>Currently on the <span class="font-medium"><%= @family.subscription.name %></span>.</span>
 
               <% if @family.next_billing_date %>
-                <span>Your contribution posts on <span class="font-medium"><%= @family.next_billing_date.strftime("%B %d, %Y") %></span>.</span>
+                <span><%= t("views.settings.payments.renewal", date: l(@family.next_billing_date, format: :long)) %></span>
               <% end %>
             </p>
           <% elsif @family.trialing? %>
