Fix grammar error

--- a/app/views/settings/payments/show.html.erb
+++ b/app/views/settings/payments/show.html.erb
@@ -23,7 +23,7 @@
             <p class="text-primary">
               Currently using the open demo of <%= product_name %> <br />
               <span class="text-secondary">
-                (Data will deleted in <%= @family.days_left_in_trial %> days)
+                (Data will be deleted in <%= @family.days_left_in_trial %> days)
               </span>
             </p>
           <% else %>
