--- a/app/views/subscriptions/upgrade.html.erb
+++ b/app/views/subscriptions/upgrade.html.erb
@@ -46,7 +46,7 @@
 
       <div class="text-center space-y-2">
         <%= render DS::Button.new(
-          text: "Contribute and support Sure",
+          text: t('subscriptions.upgrade.contribute_and_support_sure'),
           variant: "primary",
           full_width: true
         ) %>
