--- a/app/views/subscriptions/upgrade.html.erb
+++ b/app/views/subscriptions/upgrade.html.erb
@@ -25,18 +25,18 @@
     <%= image_tag "logo-color.png", class: "w-16 mb-6" %>
 
     <% if Current.family.trialing? %>
-      <p class="text-xl lg:text-3xl text-primary font-display font-medium">Your data will be deleted in <%= Current.family.days_left_in_trial %> days</p>
+      <p class="text-xl lg:text-3xl text-primary font-display font-medium"><%= t('subscriptions.upgrade.trialing', days: Current.family.days_left_in_trial) %></p>
     <% else %>
-      <p class="text-xl lg:text-3xl text-primary font-display font-medium">Your trial is over</p>
+      <p class="text-xl lg:text-3xl text-primary font-display font-medium"><%= t('subscriptions.upgrade.trial_over') %></p>
     <% end %>
 
     <h2 class="text-xl lg:text-3xl font-display font-medium mb-2">
-      <span class="text-secondary">Support</span>
-      <span class="bg-gradient-to-r from-[#EABE7F] to-[#957049] bg-clip-text text-transparent">Sure</span>
-      <span class="text-secondary">today</span>
+      <span class="text-secondary"><%= t('subscriptions.upgrade.header.support') %></span>
+      <span class="bg-gradient-to-r from-[#EABE7F] to-[#957049] bg-clip-text text-transparent"><%= t('subscriptions.upgrade.header.sure') %></span>
+      <span class="text-secondary"><%= t('subscriptions.upgrade.header.today') %></span>
     </h2>
 
-    <p class="text-sm text-secondary mb-8">Continue supporting the development of this codebase!</p>
+    <p class="text-sm text-secondary mb-8"><%= t('subscriptions.upgrade.cta') %></p>
 
     <%= form_with url: new_subscription_path, method: :get, class: "max-w-xs", data: { turbo: false } do |form| %>
       <div class="space-y-4 mb-6">
