--- a/app/views/loans/tabs/_overview.html.erb
+++ b/app/views/loans/tabs/_overview.html.erb
@@ -45,7 +45,9 @@
   <% end %>
 
   <%= summary_card title: t(".term") do %>
-    <% if account.loan.term_months.present? %>
+    <% if account.installment.present? %>
+      <%= pluralize(account.installment.total_term, account.installment.payment_period.chomp('ly').tr('_', '-')) %>
+    <% elsif account.loan.term_months.present? %>
       <% if account.loan.term_months < 12 %>
         <%= pluralize(account.loan.term_months, "month") %>
       <% else %>
