--- a/app/views/holdings/show.html.erb
+++ b/app/views/holdings/show.html.erb
@@ -75,7 +75,7 @@
                     class: "space-y-3",
                     data: drawer_form_data do |f| %>
                 <p class="text-xs text-secondary mb-2">
-                  <%= t("holdings.cost_basis_cell.set_cost_basis_header", ticker: @holding.ticker, qty: number_with_precision(@holding.qty, precision: 4)) %>
+                  <%= t("holdings.cost_basis_cell.set_cost_basis_header", ticker: @holding.ticker, qty: format_quantity(@holding.qty)) %>
                 </p>
                 <!-- Total cost basis input -->
                 <div class="form-field">
